--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,12 +1,13 @@
 .about__backcloud {
   position: absolute;
   right: 650px;
-  padding-top: 50px;
+  top: 1300px;
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   position: left;
+  z-index: -1;
 }
 
 .about__background {
@@ -40,18 +41,6 @@
   grid-auto-rows: auto;
 }
 
-.about__me-image {
-  border-radius: 2rem;
-  overflow: hidden;
-  transform: rotate(10deg);
-  transition: var(--transition);
-  width: 250px;
-  height: auto;
-}
-
-.about__me-image:hover {
-  transform: rotate(0);
-}
 
 .about__cards {
   display: grid;
@@ -59,35 +48,7 @@
   gap: 1.5rem;
 }
 
-.about__card {
-  background: #a2a3a2;
-  border: 1px solid transparent;
-  border-radius: 1rem;
-  padding: 2rem;
-  text-align: center;
-  transition: var(--transition);
-}
 
-.about__card:hover {
-  cursor: default;
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  position: left;
-}
-
-@keyframes about__card {
-  0% {
-    transform: translate(0, 0px);
-  }
-  50% {
-    transform: translate(0, 15px);
-  }
-  100% {
-    transform: translate(0, -0px);
-  }
-}
 
 .about__icon {
   color: var(--color-primary);
@@ -104,92 +65,34 @@
   color: var(--color-black);
 }
 
+.about__content {
+   background-color: rgba(52, 48, 50, 0.2);
+   border-radius: 2rem;
+    padding: 2rem;
+}
+
 .about__content p {
-  margin: 2rem 0 2.6rem;
-  color: black;
-  font-size: 1.25rem;
-  text-align: center;
-  background-color: rgba(52, 48, 50, 0.2);
-  border-radius: 2rem;
-  padding: 2rem;
+  font-size: 25px;
 }
 
-.about__content a {
-  right: 10px;
-  position: absolute;
-  bottom: 20px;
+.about__content h1 {
+  color: white;
 }
 
 
-/* media queries */
-
-@media screen and  (min-width: 1000px) {
-  .about__container {
-    display: grid;
-    grid-template-columns: 40% 50%;
-    gap: 10%;
-    position: relative;
-    padding: 3rem 2rem;
-    align-items: baseline;
-  }
-
-  .about__me-image {
-    border-radius: 2rem;
-    overflow: hidden;
-    transform: rotate(10deg);
-    transition: var(--transition);
+@media (max-width: 500px) {
+  .social-image {
+    padding: 0px;
+    margin: 0px;
     width: 350px;
-    height: auto;
-    margin-left: 5rem;
-    margin-bottom: 2rem;
-  }
-
-  .about__content a {
-    right: 6rem;
-    position: absolute;
-    bottom: 8rem;
-  }
-
-  .about__content p {
-    margin: 2rem 0 2.6rem;
-    color: black;
-    font-size: 1.25rem;
-    text-align: center;
-    background-color: rgba(52, 48, 50, 0.2);
-    border-radius: 2rem;
-    padding: 2rem;
-    margin-right: 4rem;
-    margin-top: 4rem;
-  }
-
-
-}
-
-@media screen and (max-width: 999px) and (min-width: 400px) {
-  .about__content p {
-    margin: 2rem 0 2.6rem;
-    color: black;
-    font-size: 1.5rem;
-    text-align: center;
-    background-color: rgba(52, 48, 50, 0.2);
-    border-radius: 2rem;
-    padding: 2rem;
-  }
-
-  .about__container {
-    display: grid;
-    grid-template-rows: 40% 50%;
-    gap: 5%;
     position: relative;
-    padding: 3rem 2rem;
-    justify-items: center;
-    align-items: center;
-    grid-auto-rows: auto;
+    right: 40px;
+    justify-content: center;
+    margin-bottom: 70px
   }
 
-  .about__content a {
-    right: 5rem;
-    position: absolute;
-    bottom: 6rem;
+  .blog-title {
+
+    width: 200px;
   }
 }
